--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -34,11 +34,11 @@ spec:
         image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
         env:
         - name: VIRTUAL_HOST
-          value: nginx
+          value: "nginx"
         - name: VIRTUAL_PORT
-          value: 80
+          value: "80"
         - name: HTTPS_METHOD
-          value: noredirect
+          value: "noredirect"
         ports:
         - containerPort: 80
 
